@@ -1,3 +1,8 @@
+2007-06-15  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-settings-screensaver.c:
+	(gnome_settings_module_screensaver_start): don't leak the GError
+
 2007-06-11  Bastien Nocera  <hadess@hadess.net>
 
 	* gnome-settings-multimedia-keys.c: (do_action): Force launching
